[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "litkom-bot"
version = "1.0.0"
description = "Telegram bot for Literature Committee AN"
requires-python = ">=3.11,<3.13"
dependencies = [
    "aiogram==3.4.1",
    "aiosqlite==0.19.0", 
    "python-dotenv==1.0.0",
    "pydantic==2.5.3",
    "aiohttp==3.9.5"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
